# accelerated-pca

./: LICENSE  README.md  mise.toml  pyproject.toml
.github/workflows/: python-tests.yml
assets/animation/: pca_scene.py
benchmarks/: pca_benchmark.ipynb
src/accelerated_pca/: __init__.py
src/accelerated_pca/common/: __init__.py  preprocessing.py
src/accelerated_pca/cpu/: __init__.py  pca_cpu.py
src/accelerated_pca/cuda/: __init__.py  pca_cuda.cu  pca_cuda.py  pca_fit.cu  pca_project.cu
tests/: test_common.py  test_cpu.py
